# pet_ray_tracer_inCUDA

./: CMakeLists.txt  camera.h  color.h  hittable.h  hittable_list.h  main.cu  material.h  readme.md  rtweekend.h  sphere.h  vec3.h
cuda/: main.cu  ray.h  vec3.h
devlogs/: record.md
nocuda/: main.cpp  vec3.h
src/: main.cu
src/camera/: camera.h
src/geometry/: hittable.h  hittable_list.h  ray.h  sphere.h
src/material/: material.h
